creacion database y content provider

--- a/ReviewApplication/app/src/main/AndroidManifest.xml
+++ b/ReviewApplication/app/src/main/AndroidManifest.xml
@@ -27,7 +27,13 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+
+        <provider
+            android:name=".providers.MyContentProvider"
+            android:authorities="co.example.provider.MyContentProvider"
+            android:enabled="true"
+            android:exported="true"></provider>
     </application>
 
 </manifest>
