--- a/ReviewApplication/app/build.gradle
+++ b/ReviewApplication/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.orhanobut:logger:2.1.1'
     compile 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.android.support:cardview-v7:26.1.0'
 }
