--- a/ReviewApplication/app/src/main/AndroidManifest.xml
+++ b/ReviewApplication/app/src/main/AndroidManifest.xml
@@ -8,6 +8,9 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <permission android:name="co.aulamatriz.permission.CONTEN_PROV"
+        android:protectionLevel="normal" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -27,13 +30,20 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar" >
+
+            <intent-filter>
+                <action android:name="android.intent.action.MY_CUSTOM_ACTION" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
 
         <provider
             android:name=".providers.MyContentProvider"
             android:authorities="co.example.provider.MyContentProvider"
             android:enabled="true"
-            android:exported="true"></provider>
+            android:permission="co.aulamatriz.permission.CONTEN_PROV"
+            android:exported="false" />
     </application>
 
 </manifest>
